<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homeTitleTv"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_24"
            android:layout_marginTop="@dimen/horizontal_margin_48"
            android:text="@string/title" />

        <TextView
            android:id="@+id/homeSubTitleTv"
            style="@style/SubTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/horizontal_margin_24"
            android:gravity="start"
            android:text="@string/subtitle" />

        <ImageView
            android:id="@+id/animationView"
            android:layout_width="@dimen/minimal_height_300"
            android:layout_height="@dimen/minimal_height_300"
            android:layout_gravity="center"
            android:layout_margin="@dimen/horizontal_margin_24"
            android:src="@drawable/ic_superhero"
            android:contentDescription="@string/SuperHero" />

        <Button
            android:id="@+id/letsGoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/horizontal_margin_24"
            android:background="@drawable/bg_rounded_corners_black"
            android:padding="@dimen/small_image"
            android:text="@string/btn_search"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_body"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>