<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchTitleTv"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_24"
            android:layout_marginEnd="@dimen/horizontal_margin_24"
            android:layout_marginTop="@dimen/horizontal_margin_48"
            android:textAlignment="center"
            android:text="@string/titleSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_margin_24"
            android:background="@drawable/bg_rounded_radio_black"
            android:hint="@string/hintSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/horizontal_margin_16"
            android:imeOptions="actionDone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchTitleTv" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/heroRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/horizontal_margin_16"
            app:layout_constraintBottom_toTopOf="@+id/searchBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchTv"
            tools:listitem="@layout/list_item_hero" />

        <Button
            android:id="@+id/searchBtn"
            style="@style/ButtonBlackTextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/horizontal_margin_24"
            android:text="@string/btn_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>